Fix the style for headers
The current scheme was hard to read as h1/h2 looked too similar.
To make them different, I removed most of the custom CSS.

One addition is an horizontal line between h1 sections.

--- a/html/style/main.css
+++ b/html/style/main.css
@@ -13,21 +13,11 @@ body {
 }
 
 h1 {
-  font-size: 2rem;
-  letter-spacing: 0.05em;
-  line-height: 1.2;
-  border-bottom: 1px solid #d0d7de;
+  border-top: 1px solid black;
 }
 
-h2 {
-  font-size: 1.8rem;
-  line-height: 1.1;
-  border-bottom: 1px solid #d0d7de;
-}
-
-h3 {
-  font-size: 1.5rem;
-  line-height: 1.1;
+h1:first-child {
+  border-top: inherit !important;
 }
 
 section {
